--- a/src/main/resources/templates/reports.html
+++ b/src/main/resources/templates/reports.html
@@ -9,21 +9,19 @@
         <main class="col-md-8 px-md-3 mt-4">
             <div class="row">
                 <!-- Card 1 -->
-                <div class="col-md-6 mb-4">
+                <div class="col-md-4 mb-4">
                     <a href="/index">
-                        <div class="card h-100">
+                        <div class="card reportBth">
                             <div class="card-body text-center d-flex justify-content-center align-items-center">
-                                <img src="/img/icons/predict.png" class="card-img-top" alt="Prediction">
+                                <img src="/img/icons/prediction.png" class="card-img" alt="Prediction">
                                 <div class="overlay">Prediction</div>
                             </div>
                         </div>
                     </a>
                 </div>
-
-                <!-- Card 3 -->
-                <div class="col-md-6 mb-4">
+                <div class="col-md-4 mb-4">
                     <a href="/reports/sale">
-                        <div class="card h-100">
+                        <div class="card reportBth">
                             <div class="card-body text-center d-flex justify-content-center align-items-center">
                                 <img src="/img/icons/sale.png" class="card-img-top" alt="Sale">
                                 <div class="overlay">Sale</div>
@@ -31,11 +29,9 @@
                         </div>
                     </a>
                 </div>
-
-                <!-- Card 4 -->
-                <div class="col-md-6 mb-4">
+                <div class="col-md-4 mb-4">
                     <a href="/reports/waste">
-                        <div class="card h-100">
+                        <div class="card reportBth">
                             <div class="card-body text-center d-flex justify-content-center align-items-center">
                                 <img src="/img/icons/waste.png" class="card-img-top" alt="Waste">
                                 <div class="overlay">Waste</div>
