--- a/src/main/resources/templates/prepNew.html
+++ b/src/main/resources/templates/prepNew.html
@@ -8,7 +8,7 @@
         <div th:replace="~{fragments/sidebar :: sidebar('preparation')}"></div>
         <main class="col-md-8 px-md-3 mt-4">
             <div class="row">
-                <div class="col col-md-4 mt-5">
+                <div class="col col-md-4 col-sm-6 mt-5">
                     <div th:replace="~{fragments/productList :: productList}"></div>
                 </div>
                 <div class="col col-md-1 blank"></div>
