--- a/src/main/resources/templates/recipesAdd.html
+++ b/src/main/resources/templates/recipesAdd.html
@@ -8,7 +8,7 @@
         <div th:replace="~{fragments/sidebar :: sidebar('recipes')}"></div>
         <main class="col-md-8 px-md-3 mt-4">
             <div class="row">
-                <div class="col col-md-4 mt-5">
+                <div class="col col-md-5 col-sm-6 mt-5">
                     <a href="/recipes" class="btn btn-secondary mb-3">Back</a>
                     <div th:replace="~{fragments/productList :: productList}"></div>
                 </div>
