--- a/src/main/resources/templates/queryGPT.html
+++ b/src/main/resources/templates/queryGPT.html
@@ -61,6 +61,6 @@
 
 </div>
     <div th:replace="~{fragments/scripts :: scripts}"></div>
-    <script th:src="@{/scripts/chatGPT.js}"></script>
+    <script th:src="@{/scripts/neuralNetwork.js}"></script>
 </body>
 </html>
