--- a/src/main/resources/templates/reports/predictions.html
+++ b/src/main/resources/templates/reports/predictions.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/header :: header('SCORAC Sale Report')}"/>
+<head th:replace="~{fragments/header :: header('SCORAC Prediction Report')}"/>
 <body>
-<div th:replace="~{fragments/logoBar :: logoBar('Sale Report')}"></div>
+<div th:replace="~{fragments/logoBar :: logoBar('Predition Report')}"></div>
 <div class="container-fluid">
     <div class="row bg">
         <div th:replace="~{fragments/sidebar :: sidebar('reports')}"></div>
         <main class="col-md-8 px-md-3 mt-4">
-            <table>
+           <input type="text" id="searchInput" class="form-control mt-3" placeholder="Search for products...">
+            <table id="resultsTable" class="table table-striped mt-3">
                 <thead>
                 <tr>
-                    <th>Product</th>
-                    <th>Prediction</th>
+                    <th>Product Name</th>
+                    <th>Values in grams</th>
                 </tr>
                 </thead>
                 <tbody>
-                <!-- Iterate over the map and display each key-value pair -->
-                <tr th:each="entry : ${productPredictions}">
-                    <td th:text="${entry.key}">Product</td>
-                    <td th:text="${entry.value}">Prediction</td>
-                </tr>
                 </tbody>
             </table>
         </main>
@@ -28,8 +24,36 @@
 </div>
 
 <div th:replace="~{fragments/scripts :: scripts}"></div>
-<!--<script th:src="@{/scripts/formPopulator.js}"></script>-->
-<!--<script th:src="@{/scripts/saleChart.js}"></script>-->
+<script>
+    $(document).ready(function() {
+            $.ajax({
+                url: '/predict', // Endpoint URL
+                method: 'GET',
+                dataType: 'json',
+                success: function(data) {
+                    var table = $("#resultsTable tbody");
+                    table.empty(); // Clear previous results
+                    $.each(data, function(key, value) {
+                        var row = `<tr>
+                                  <td>${key}</td>
+                                  <td>${value}</td>
+                               </tr>`;
+                        table.append(row);;
+                    });
+                },
+
+                error: function() {
+                    alert('Error retrieving data. Please try again.');
+                }
+            });
+        $("#searchInput").on("keyup", function() {
+            var value = $(this).val().toLowerCase();
+            $("#resultsTable tbody tr").filter(function() {
+                $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+            });
+        });
+    });
+</script>
 
 </body>
 
